--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,10 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
 		<dependency>
 		 	<groupId>org.springframework.boot</groupId>
 		 	<artifactId>spring-boot-starter-security</artifactId>
