--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>projetotecnico</name>
 	<description>Projeto técnico</description>
-	<properties>
-		<java.version>11</java.version>
-	</properties>
+    <properties>
+        <java.version>8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -40,6 +42,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
 		</dependency>
 		<dependency>
 		 	<groupId>org.springframework.boot</groupId>
